--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Pebutra, A personal budget tracker",
   "main": "EntryPoint.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron ."
   },
   "devDependencies": {
