--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "pebutra",
   "version": "1.0.0",
   "description": "Pebutra, A personal budget tracker",
-  "main": "EntryPoint.js",
+  "main": "app/EntryPoint.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "test": "mocha tests/tests.js"
   },
   "devDependencies": {
     "electron": "^3.0.6",
@@ -16,7 +14,13 @@
   },
   "dependencies": {
     "electron-log": "^2.2.17",
-    "electron-store": "^2.0.0"
+    "electron-store": "^2.0.0",
+    "express": "^4.17.1",
+    "morgan": "^1.9.1",
+    "mustache": "^3.0.1",
+    "mustache-express": "^1.2.8",
+    "mysql": "^2.17.1",
+    "socket.io": "^2.2.0"
   },
   "repository": {
     "type": "git",
