--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app/EntryPoint.js",
   "scripts": {
     "start": "electron .",
-    "test": "mocha tests/tests.js"
+    "test": "mocha -R spec tests"
   },
   "devDependencies": {
     "electron": "^3.0.6",
@@ -16,6 +16,7 @@
     "electron-log": "^2.2.17",
     "electron-store": "^2.0.0",
     "express": "^4.17.1",
+    "js-yaml": "^3.13.1",
     "morgan": "^1.9.1",
     "mustache": "^3.0.1",
     "mustache-express": "^1.2.8",
