--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-log": "^2.2.17",
     "electron-store": "^2.0.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "morgan": "^1.9.1",
     "mustache": "^3.0.1",
