--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mustache": "^3.0.1",
     "mustache-express": "^1.2.8",
     "mysql": "^2.17.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "winston": "^3.2.1"
   },
   "repository": {
     "type": "git",
