--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pebutra, A personal budget tracker",
   "main": "app/EntryPoint.js",
   "scripts": {
-    "start": "NODE_ENV=development electron .",
+    "start": "NODE_ENV=production electron .",
     "test": "mocha -R spec tests"
   },
   "devDependencies": {
