--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "description": "Pebutra, A personal budget tracker",
   "main": "app/EntryPoint.js",
   "scripts": {
-    "start": "NODE_ENV=development electron .",
+    "start": "NODE_ENV=development electron dist/EntryPoint.js",
     "test": "mocha -R spec tests"
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.30",
+    "@types/node": "^12.0.10",
     "electron": "^3.0.6",
     "electron-builder": "^20.28.4",
     "electron-mocha": "^6.0.4"
   },
   "dependencies": {
+    "@types/jquery": "^3.3.29",
+    "@types/node": "^12.0.10",
+    "@types/socket.io": "^2.1.2",
     "electron-log": "^2.2.17",
     "electron-store": "^2.0.0",
     "express": "^4.17.1",
+    "i": "^0.3.6",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "morgan": "^1.9.1",
