--- a/package.json
+++ b/package.json
@@ -2,38 +2,43 @@
   "name": "pebutra",
   "version": "1.0.0",
   "description": "Pebutra, A personal budget tracker",
-  "main": "app/EntryPoint.js",
+  "main": "dist/EntryPoint.js",
   "scripts": {
-    "start": "NODE_ENV=development electron dist/EntryPoint.js",
-    "test": "mocha -R spec tests"
+    "clean": "rimraf dist/",
+    "copyassets": "node copy-assets.js",
+    "start": "NODE_ENV=development electron .",
+    "build": "npm run-script clean && tsc && npm run-script copyassets && npm test",
+    "buildrun": "npm run-script build && npm run-script start",
+    "test": "mocha -R spec dist/tests"
   },
   "devDependencies": {
-    "@types/jquery": "^3.3.30",
-    "@types/node": "^12.0.10",
     "electron": "^3.0.6",
     "electron-builder": "^20.28.4",
-    "electron-mocha": "^6.0.4"
+    "electron-mocha": "^6.0.4",
+    "@types/node": "^12.0.10",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.7"
   },
   "dependencies": {
-    "@types/jquery": "^3.3.29",
-    "@types/node": "^12.0.10",
-    "@types/socket.io": "^2.1.2",
+    "chai": "^4.2.0",
     "electron-log": "^2.2.17",
     "electron-store": "^2.0.0",
     "express": "^4.17.1",
-    "i": "^0.3.6",
+    "fs-extra": "^8.0.1",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "morgan": "^1.9.1",
     "mustache": "^3.0.1",
     "mustache-express": "^1.2.8",
     "mysql": "^2.17.1",
+    "rimraf": "^2.6.3",
+    "shelljs": "^0.8.3",
     "socket.io": "^2.2.0",
     "winston": "^3.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "pebutra"
+    "url": "https://github.com/cemozden/pebutra/"
   },
   "keywords": [
     "pebutra",
