Winston logger configured

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
       "outDir": "dist",
       "alwaysStrict" : true,
       "moduleResolution": "node",
-      "sourceMap": true,
-      "typeRoots": ["types"]
+      "sourceMap": true
     },
     "include": [
         "src/**/*"
