--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "electron-log": "^2.2.17",
     "electron-store": "^2.0.0",
     "express": "^4.17.1",
+    "express-winston": "^3.2.0",
     "fs-extra": "^8.0.1",
     "jquery": "^3.4.1",
     "js-yaml": "^3.13.1",
     "logform": "^2.1.2",
-    "morgan": "^1.9.1",
     "mustache": "^3.0.1",
     "mustache-express": "^1.2.8",
     "mysql": "^2.17.1",
