--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.7",
+    "@types/mysql": "^2.15.6",
     "@types/node": "^12.0.10",
     "electron": "^3.0.6",
     "electron-builder": "^20.28.4",
