--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mysql": "^2.17.1",
     "shelljs": "^0.8.3",
     "socket.io": "^2.2.0",
+    "typescript": "^3.7.2",
     "winston": "3.2.1"
   },
   "repository": {
