PEBUTRA-1: Travis yml latest update before closing issue. Caching npm

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language : node_js
 node_js:
   - "node"
+os : linux
 dist : xenial
 services:
   mysql
@@ -12,3 +13,9 @@ before_script:
   - mysql -u root PEBUTRA_TEST < pebutra_test.sql
 install : 
   - npm install
+branches:
+  only:
+    - development
+  except:
+    - master
+cache : npm
